<resources>
    <string name="app_name">SeisMap PH</string>
    <string name="tab_1">Explore</string>
    <string name="tab_2">Clustering</string>
    <string name="tab_3">Time Series</string>
    <string name="tab_4">About</string>
    <string name="fab">Your Location</string>

    <!-- Cluster Fragment Strings -->
    <string name="clusterTag">Cluster Category:</string>
    <string name="locationTag">Location:</string>
    <string name="timeStamp">Date:</string>
    <string name="magnitudeTag">Magnitude:</string>
    <string name="depthTag">Depth:</string>
    <string name="earthquakeTag">Earthquake Details</string>

    <!-- Preference Fragment Titles -->
    <string name="customize">Dataset Customization</string>
    <string name="magnitude">Magnitude</string>
    <string name="max_magnitude">Maximum Magnitude</string>
    <string name="depth">Depth</string>
    <string name="depthDescription">Shallow or deep</string>
    <string name="magnitudeDescription">Specify a magnitude range</string>
    <string name="date">Date Inclusion</string>
    <string name="dateDescription">Timeline focus</string>
    <string name="hours">Specific Hours</string>

    <string name="algorithm">Algorithm Customization</string>
    <string name="tsa">Time Series Analysis</string>
    <string name="tsa1">ARIMA</string>
    <string name="tsa2">SARIMA</string>
    <string name="tsa3">LSTM</string>

    <string name="clustering">Clustering Analysis</string>
    <string name="clusteringdescription"> Group Detection</string>
    <string name="clustering1">DBSCAN</string>
    <string name="clustering2">Mini Batch K-Means</string>

    <string name="choose_algo">Choose an Algorithm</string>

    <string name="datasetCategory">Dataset</string>
    <string name="datasetSource">Source</string>

    <string name="settingsActivity">Data Filters</string>

    <string name="blank">   </string>

    <!-- Placeholders -->

    <string name="magnitude_dialog">Choose min and max values for magnitude</string>
    <string name="magnitude_range">Magnitude Range</string>

    <string name="depth_dialog">Choose min and max values for depth (km)</string>
    <string name="depth_range">Depth Range</string>

    <string name="date_dialog">Choose start and end dates for timeline focus</string>
    <string name="date_range">Date Range</string>
    <string name="date_picker">Open Date Picker</string>

    <string name="dash_int">%d - %d</string>
    <string name="dash_float">%.1f - %.1f</string>
    <string name="dash_string">%s to %s</string>
    <string-array name="mag_range">
        <item>3.0</item>
        <item>7.4</item>
    </string-array>

    <string-array name="depth_range">
        <item>0</item>
        <item>1068</item>
    </string-array>


    <string-array name="cluster_options">
        <item>DBSCAN</item>
        <item>Mini Batch K-Means</item>
    </string-array>

    <!-- Custom Dialog-->
    <string name="apply">Apply</string>
    <string name="restore_default">Restore to Default</string>

    <string-array name="cluster_values">
        <item>dbscan</item>
        <item>kmeans</item>
    </string-array>

    <string-array name="time_series_options">
        <item>LSTM</item>
        <item>ARIMA</item>
<!--        <item>SARIMA</item>-->
    </string-array>

    <string-array name="time_series_values">
        <item>lstm</item>
        <item>arima</item>
<!--        <item>sarima</item>-->
    </string-array>

    <string name="phivolcs">PHIVOLCS</string>
    <string-array name="data_source_options">
        <item>PHIVOLCS</item>
        <item>USGS</item>
    </string-array>

    <string-array name="data_source_values">
        <item>phivolcs</item>
        <item>usgs</item>
    </string-array>



    <!-- Root Preferences -->
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <!-- Clustering Screen -->
    <string name="model_description">Model Name</string>
    <string name="model_choice">Choose a Clustering Model</string>
    <string name="dbi_des">DBI:</string>
    <string name="mi_des">MI:</string>
    <string name="sil_des">SS:</string>
    <string name="no_clusters">Clusters:</string>

    <string name="cluster">Cluster</string>
    <string name="cluster_analysis">Clustering Visualization</string>

    <string name="models">Other Models:</string>
    <string name="data_source">PHIVOLCS</string>

    <!-- Progress Related -->
    <string name="loading">Plotting Points on Open Street Map…</string>
    <string name="loading1">Plotting Points from the Model…</string>
    <string name="settings">Settings</string>


    <!-- Article Screen -->

    <string name="kmeans_article">K-means clustering groups similar data points. The standard approach can be slow for enormous datasets. Mini-batch K-means tackles this by processing data in smaller batches. Instead of using all the data at once to update cluster centers, it samples a small portion (mini-batch) and updates centers based on that sample. This speeds things up significantly, but might result in slightly less accurate clustering compared to the traditional method. It\'s a good choice for massive datasets where faster processing is a priority.</string>
    <string name="what_to_know">What to Know?</string>
    <string name="tap_description">Tap on a model to load its details</string>


    <!-- map legend -->
    <string name="depthinkm">Depth (Km)</string>
    <string name="magnitude_item">Magnitude</string>
    <string name="depth_item">Depth</string>
    <string name="legend">Earthquake Legend</string>
    <string name="min_mag">3</string>
    <string name="max_mag">7.4</string>
    <string name="min_depth">0</string>
    <string name="max_depth">0</string>
    <string name="volcano">Active Volcanoes</string>


    <!-- map legend clusters -->
    <string name="cluster_legend">Cluster List</string>
    <string name="cluster_0">Outliers</string>
    <string name="cluster_1">Cluster 1</string>
    <string name="cluster_2">Cluster 2</string>
    <string name="cluster_3">Cluster 3</string>
    <string name="cluster_4">Cluster 4</string>
    <string name="cluster_5">Cluster 5</string>
    <string name="cluster_color">Color</string>


    <!-- Time Series Screen -->
    <string name="arima">Model Name: ARIMA(1,1,2)</string>


    //Headings
    <string name="heading_one">Discover Earthquakes</string>
    <string name="heading_two">Unveiling Patterns</string>
    <string name="heading_three">Analyze Trends</string>
    <string name="heading_fourth">SeisMap PH: Experience</string>

    //Description
    <string name="desc_one">Dive into seismic activity across the Philippines to understand patterns and trends.</string>
    <string name="desc_two">Explore in-depth analysis techniques to uncover clusters and patterns within earthquake data, providing valuable insights into seismic behavior.</string>
    <string name="desc_three">Utilize advanced time series analysis to forecast earthquake occurrences and understand temporal dynamics for better preparedness.</string>
    <string name="desc_fourth">Seamlessly integrate your exploration with SeisMap PH, the comprehensive app offering cluster analysis, time series insights, and earthquake exploration. Try it now for a holistic seismic experience!</string>



</resources>
