<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/customize">

        <EditTextPreference
            app:key="earthquake_magnitude"
            app:title="@string/magnitude"
            app:defaultValue="@string/magnitudeDescription"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="@string/depthDescription"
            app:key="earthquake_depth"
            app:title="@string/depth"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="@string/dateDescription"
            app:entries="@array/reply_entries"
            app:key="earthquake_date"  app:title="@string/date"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/algorithm">

        <ListPreference
            app:defaultValue="@string/clusteringdescription"
            app:key="cluster_algorithm"
            app:title="@string/clustering"
            app:useSimpleSummaryProvider="true"
            app:summary="@string/choose_algo" />


        <ListPreference
            app:defaultValue="@string/choose_algo"
            app:key="tsa_algorithm"
            app:title="@string/tsa"
            app:useSimpleSummaryProvider="true"
            app:summary="@string/choose_algo" />


    </PreferenceCategory>

    <PreferenceCategory android:title="About">
        <Preference
            android:summary="1.0.0"
            android:title="Version" />
    </PreferenceCategory>

</PreferenceScreen>
