<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_child_item"
            android:layout_width="238dp"
            android:layout_height="75dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="10dp"
            app:cardElevation="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/black">

            <ImageView
                android:id="@+id/iv_child_item"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:src="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:text="@string/model_description"
                android:textColor="@color/white"
                android:id="@+id/model_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dbi_des"
                android:textColor="@color/white"
                android:layout_marginTop="22dp"
                android:layout_marginStart="53dp"
                android:id="@+id/dbi"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sil_des"
                android:id="@+id/ss"
                android:textColor="@color/white"
                android:layout_marginTop="22dp"
                android:layout_marginStart="135dp" />

            <TextView
                android:id="@+id/nc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="53dp"
                android:layout_marginTop="45dp"
                android:text="@string/no_clusters"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/mi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="135dp"
                android:layout_marginTop="45dp"
                android:text="@string/mi_des"
                android:textColor="@color/white" />


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
