<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AboutFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="222dp"
        android:layout_marginBottom="44dp"
        android:padding="5dp"
        android:text="@string/customize"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_height="wrap_content"
        android:layout_marginEnd="161dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:text="@string/magnitude"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_height="wrap_content"
        android:layout_marginEnd="83dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:text="@string/magnitudeDescription"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <TextView
        android:layout_height="wrap_content"
        android:layout_marginEnd="83dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:text="@string/magnitudeDescription"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_height="wrap_content"
        android:layout_marginEnd="306dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:text="@string/depth"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_height="wrap_content"
        android:layout_marginEnd="82dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="4dp"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:text="@string/depthDescription"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_height="wrap_content"
        android:layout_marginEnd="212dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="28dp"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:text="@string/date"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_height="wrap_content"
        android:layout_marginEnd="267dp"
        android:layout_marginStart="29dp"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:text="@string/dateDescription"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_height="wrap_content"
        android:layout_marginEnd="216dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="34dp"
        android:layout_width="wrap_content"
        android:text="@string/algorithm"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_height="wrap_content"
        android:layout_marginEnd="155dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="44dp"
        android:layout_width="wrap_content"
        android:text="@string/clustering"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_height="wrap_content"
        android:layout_marginEnd="274dp"
        android:layout_marginStart="29dp"
        android:layout_width="wrap_content"
        android:text="@string/clusteringdescription"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />


    <TextView
        android:id="@+id/textView12"
        android:layout_height="wrap_content"
        android:layout_marginEnd="192dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:text="@string/tsa"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_marginEnd="274dp"
        android:layout_marginStart="29dp"
        android:layout_width="wrap_content"
        android:text="@string/clusteringdescription"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />


    <!-- Placeholders -->

    <Spinner
        android:id="@+id/mag_minimum"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:entries="@array/min"
        android:prompt="@string/minimum"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:layout_width="wrap_content"
        android:text="@string/dash"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/mag_maximum"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/mag_minimum"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:entries="@array/min"
        android:id="@+id/mag_maximum"
        android:layout_height="wrap_content"

        android:layout_marginEnd="16dp"
        android:layout_marginTop="100dp"
        android:layout_width="75dp"
        android:prompt="@string/minimum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>